# cmake-tutorials

./: README.md
1/: CMakeLists.txt  helloworld.cpp
2/: CMakeLists.txt
3/: CMakeLists.txt
3/src/: arithmetic.cpp
4/: CMakeLists.txt
4/tests/: test_arithmetic.cpp  test_runner.cpp
5/tests/: test_my_math.cpp
6/: CMakeLists.txt
6/src/: arithmetic.cpp
7/: CMakeLists.txt
7/src/: main.cpp
7/tests/: CMakeLists.txt
example-10/: CMakeLists.txt  Config.cmake.in  README
example-10/include/: CMakeLists.txt
example-10/include/statistic/: regression.hpp
example-10/src/: regression.cpp
example-10/tests/: CMakeLists.txt
example-2/include/: vec.hpp
example-2/src/: main.cpp
example-3/src/: main.cpp
example-4/src/: vec.cpp
example-5/: CMakeLists.txt
example-6/tests/: test_my_math.cpp
example-7/: CMakeLists.txt
example-7/src/: CMakeLists.txt
example-7/src/my_math/: CMakeLists.txt  my_math.cpp  my_math.hpp
example-7/tests/: test_my_math.cpp
example-8/: CMakeLists.txt
example-8/example/: test_install.cpp
example-8/include/statistic/: cost_functions.hpp  utils.hpp
example-8/src/: CMakeLists.txt  cost_functions.cpp  utils.cpp
example-8/tests/: CMakeLists.txt  test_mse.cpp  test_regression.cpp  test_utils.cpp
example-9/: CMakeLists.txt
example-9/src/: CMakeLists.txt  main.cpp
